# video-converter

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
lib/ffmpeg/: CMakeLists.txt
src/: converter.cpp  converter.hpp  main.cpp  utils.cpp  utils.hpp
